update User + Feat Befenit of User